RoNetworking Rework. - Reworked networking to now use buffers, as well as using ORE (One Remote Event). - Performance is generally a lot faster and better. - Fixed an issue with firing to the server had paramaters placed incorrectly.

--- a/default.project.json
+++ b/default.project.json
@@ -5,12 +5,18 @@
     "ServerScriptService": {
       "$className": "ServerScriptService",
       "$ignoreUnknownInstances": true,
-      "$path": "src/ServerScriptService"
+      "Server": {
+        "$path": "src/Server",
+        "$ignoreUnknownInstances": true
+      }
     },
     "ReplicatedStorage": {
       "$className": "ReplicatedStorage",
       "$ignoreUnknownInstances": true,
-      "$path": "src/ReplicatedStorage"
+      "Shared": {
+        "$path": "src/Shared",
+        "$ignoreUnknownInstances": true
+      }
     },
     "StarterPlayerr": {
       "$className": "StarterPlayer",
@@ -19,7 +25,7 @@
         "$className": "StarterPlayerScripts",
         "$ignoreUnknownInstances": true,
         "Client": {
-          "$path": "src/StarterPlayer/StarterPlayerScripts/Client",
+          "$path": "src/Client",
           "$ignoreUnknownInstances": true
         }
       }
